--- a/reports/src/app/home/home.component.html
+++ b/reports/src/app/home/home.component.html
@@ -1,1 +1,23 @@
-<p>home works!</p>
+<div align="center" class="header">
+    <h1 strong>Reports Module</h1>
+    <h3>Data at its simplest form</h3>
+    <div class="topnav">
+        <a href="/report">Report List</a>
+        <a href="/chart">Charts</a>
+        <a href="/table">Tables</a>
+        <a href="/home" style="float:right">Home</a>
+    </div>
+</div>
+<br>
+<div align="center" class="card">
+    <button (click)="reportlist()">Get Started!</button>
+</div>
+<br><br><br><br><br><br>
+
+<br><br><br><br><br><br>
+
+<br><br><br><br><br><br>
+<div class="footer">
+    
+    <a href="#">Contact Us: 88790 01416</a>
+</div>
