--- a/reports/src/app/barchart/barchart.component.html
+++ b/reports/src/app/barchart/barchart.component.html
@@ -1,1 +1,8 @@
-<p>barchart works!</p>
+
+<canvas baseChart
+        [data]="barChartData"
+        [options]="barChartOptions"
+        [plugins]="barChartPlugins"
+        [legend]="barChartLegend"
+        [type]="'bar'">
+</canvas>
