--- a/reports/src/app/newreport/newreport.component.html
+++ b/reports/src/app/newreport/newreport.component.html
@@ -1,4 +1,5 @@
 <div align="center">
-    
-    <button (click)="bchart()">Add bar chart</button>
+  <!--   <button (click)="lchart()">Line chart</button>
+    <button (click)="pchart()">Pie chart</button> -->
+    <button (click)="bchart()">Bar chart</button>
 </div>
